@@ -1,3 +1,10 @@
+2009-12-28  Adam Barth  <abarth@webkit.org>
+
+        Unreviewed "build" fix (with test!).
+
+        * Scripts/modules/bugzilla.py:
+        * Scripts/modules/bugzilla_unittest.py:
+
 2009-12-27  Eric Seidel  <eric@webkit.org>
 
         Reviewed by Adam Barth.
